--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,8 +16,8 @@
 
 body {
   font-family: 'Raleway', sans-serif;
-  font-size: 1rem;
-  line-height: 1.6;
+  font-size: 0.9rem;
+  line-height: 1.4;
   background-color: #fff;
   color: #333;
 }
@@ -40,30 +40,28 @@ img {
   max-width: 1100px;
   margin: auto;
   overflow: hidden;
-  padding: 6rem 2rem;
-  /* margin-top: 6rem;
-  margin-bottom: 3rem; */
+  padding: 4.5rem 2rem;
 }
 
 /* Text Styles*/
 .x-large {
-  font-size: 4rem;
-  line-height: 1.2;
-  margin-bottom: 1rem;
-}
-
-.large {
   font-size: 3rem;
   line-height: 1.2;
   margin-bottom: 1rem;
 }
 
+.large {
+  font-size: 2rem;
+  line-height: 1.2;
+  margin-bottom: 1rem;
+}
+
 .md {
-  font-size: 1.5rem;
+  font-size: 1rem;
 }
 
 .lead {
-  font-size: 1.5rem;
+  font-size: 1rem;
   margin-bottom: 1rem;
 }
 
@@ -135,8 +133,8 @@ img {
   display: inline-block;
   background: var(--light-color);
   color: #333;
-  padding: 0.4rem 1.3rem;
-  font-size: 1rem;
+  padding: 0.2rem 1rem;
+  font-size: 0.9rem;
   border: none;
   cursor: pointer;
   margin-right: 0.5rem;
@@ -154,12 +152,14 @@ img {
 }
 
 .alert {
-  padding: 0.8rem;
+  padding: 0.5rem 0.8rem;
   margin: 1rem 0;
   opacity: 0.9;
   background: var(--light-color);
   color: #333;
   transition: all 1s;
+  top: 0.4rem;
+  position: relative;
 }
 
 .btn-primary,
@@ -259,8 +259,8 @@ img {
 .form textarea {
   display: block;
   width: 100%;
-  padding: 0.4rem;
-  font-size: 1.2rem;
+  padding: 0.3rem 0.5rem;
+  font-size: 0.8rem;
   border: 1px solid #ccc;
 }
 
@@ -344,7 +344,7 @@ button {
   position: relative;
   background: url('./img/showcase.jpg') no-repeat center center/cover;
   height: 100vh;
-  margin: -6rem -2rem;
+  /*margin: -6rem -2rem;*/
 }
 
 .landing-inner {
@@ -362,9 +362,9 @@ button {
 /* Profiles Page */
 .profile {
   display: grid;
-  grid-template-columns: 2fr 4fr 2fr;
+  grid-template-columns: 1fr 5fr 2fr;
   align-items: center;
-  grid-gap: 2rem;
+  grid-gap: 1rem;
   padding: 1rem;
   line-height: 1.8;
   margin-bottom: 1rem;
@@ -584,4 +584,37 @@ button {
   .post button {
     padding: 0.3rem 0.4rem;
   }
+}
+.pagination {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-content: center;
+  padding-left: 0;
+  list-style: none;
+  border-radius: 0.25rem;
+}
+
+.page-link {
+  position: relative;
+  cursor: pointer;
+  display: block;
+  padding: 0.5rem 0.75rem;
+  margin-left: -1px;
+  line-height: 1.25;
+  color: #007bff;
+  background-color: #fff;
+  border: 1px solid #dee2e6;
+}
+
+.page-item.active .btn {
+  z-index: 1;
+  color: #fff;
+  background-color: #007bff;
+  border-color: #007bff;
+}
+
+.pagination {
+  text-align: center;
+  margin-bottom: 10px;
 }
