--- a/client/src/App.css
+++ b/client/src/App.css
@@ -137,7 +137,7 @@ img {
   font-size: 0.9rem;
   border: none;
   cursor: pointer;
-  margin-right: 0.5rem;
+  margin: 0.2rem;
   transition: opacity 0.2s ease-in;
   outline: none;
 }
@@ -222,6 +222,8 @@ img {
 
 .round-img {
   border-radius: 50%;
+  max-width: 150px;
+  height: 100px;
 }
 
 .line {
@@ -569,6 +571,13 @@ button {
 
   .profile-about .skills {
     flex-direction: column;
+  }
+
+  .dash-buttons {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
   }
 
   .dash-buttons a {
